log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:09:03 PM UTC 2026: 
 graph.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:62:41: error: passing argument 2 of ‘is_equal_string’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   62 |         if (is_equal_string(aux->target,label2) == 0)
      |                                         ^~~~~~
graph.c:21:39: note: expected ‘void *’ but argument is of type ‘const char *’
   21 | int is_equal_string(void *key1, void *key2) {
      |                                 ~~~~~~^~~~
cc1: all warnings being treated as errors
ae1ddc8
Thu May 14 08:10:52 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
00beb65
Thu May 14 08:19:10 PM UTC 2026: 
 graph.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:46:57: error: ‘label1’ undeclared (first use in this function); did you mean ‘label’?
   46 |     MapPair* pair = map_search(g->adjacencyMap, (void*) label1);
      |                                                         ^~~~~~
      |                                                         label
graph.c:46:57: note: each undeclared identifier is reported only once for each function it appears in
f5689e4
Thu May 14 08:19:18 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:46:57: error: ‘label1’ undeclared (first use in this function); did you mean ‘label’?
   46 |     MapPair* pair = map_search(g->adjacencyMap, (void*) label1);
      |                                                         ^~~~~~
      |                                                         label
graph.c:46:57: note: each undeclared identifier is reported only once for each function it appears in
ab02916
